--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=geometry,places&v=weekly"
     ></script> -->
+    <script 
+       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg"></script>
   </head>
   <body>
     <app-root></app-root>
